[gd_scene load_steps=5 format=3 uid="uid://bkxos1yd423ia"]

[ext_resource type="Texture2D" uid="uid://smjqdfcnh387" path="res://assets/sprites/player_sprite.png" id="1_28mkb"]
[ext_resource type="Script" path="res://src/entities/enemy.gd" id="1_yain4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xm2lo"]
size = Vector2(59, 120)

[sub_resource type="CircleShape2D" id="CircleShape2D_uwjr8"]
radius = 340.024

[node name="Enemy" type="RigidBody2D" groups=["soccer"]]
collision_mask = 3
gravity_scale = 1.66533e-16
can_sleep = false
linear_damp = 1.0
angular_damp = 100.0
script = ExtResource("1_yain4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xm2lo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_28mkb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uwjr8")
debug_color = Color(0.933333, 0.117647, 0.564706, 0.419608)

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
